se agregan primeras instrucciones en js y fondo

--- a/index.html
+++ b/index.html
@@ -9,12 +9,8 @@
     <title>Primera Entrega Proyecto - Christian Menendez</title>
 </head>
 <body>
-
-    
-
-
-
-
-    <script src="script.js"></script>
+    <img src="images/galaxy-11098.jpg" alt="">
 </body>
 </html>
+
+<script src="script.js"></script>
